updated validations